--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -5,5 +5,5 @@
 %ul
   - @devices.each do |device|
     %li
-      = device.name
+      = link_to device.name, "#{device_path(device)}.js"
       = device.temperature.to_f
